// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DetailEditing/> canUpdate false 1`] = `
<div
  className="panel panel-default"
>
  <div
    className="panel-heading"
  >
    <div
      className="detail__edit--heading"
    >
      Details
    </div>
  </div>
  <div
    className="panel-body"
  >
    <div>
      <table
        className="table table-responsive table-condensed detail-component--table__fixed"
      >
        <tbody>
          <tr>
            <td>
              <span
                title="Flag"
              >
                Flag
              </span>
            </td>
            <td
              data-caption="Flag"
              data-fieldkey="flag"
            >
              <span
                className=""
              >
                
              </span>
            </td>
          </tr>
          <tr>
            <td>
              <span
                title="for set 3"
              >
                For set 3
              </span>
            </td>
            <td
              data-caption="For set 3"
              data-fieldkey="for set 3"
            >
              <span
                className=""
              >
                abc
              </span>
            </td>
          </tr>
          <tr>
            <td>
              <span
                title="again for set 3"
              >
                Again for set 3
              </span>
            </td>
            <td
              data-caption="Again for set 3"
              data-fieldkey="again for set 3"
            >
              <span
                className=""
              >
                false
              </span>
            </td>
          </tr>
          <tr>
            <td>
              <span
                title="another"
              >
                Another
              </span>
            </td>
            <td
              data-caption="Another"
              data-fieldkey="another"
            >
              <span
                className=""
              >
                test test
              </span>
            </td>
          </tr>
          <tr>
            <td>
              <span
                title="lookupfield"
              >
                Lookup Field Caption
              </span>
            </td>
            <td
              data-caption="Lookup Field Caption"
              data-fieldkey="lookupfield"
            >
              <a
                href="/labkey/Sample%20Management%202/list-details.view?listId=1&pk=test2"
              >
                test2
              </a>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`<DetailEditing/> canUpdate true 1`] = `
<div
  className="panel panel-default"
>
  <div
    className="panel-heading"
  >
    <div
      className="detail__edit--heading"
    >
      Details
      <div
        className="detail__edit-button"
        onClick={[Function]}
      >
        <i
          className="fa fa-pencil-square-o"
        />
      </div>
      <div
        className="clearfix"
      />
    </div>
  </div>
  <div
    className="panel-body"
  >
    <div>
      <table
        className="table table-responsive table-condensed detail-component--table__fixed"
      >
        <tbody>
          <tr>
            <td>
              <span
                title="Flag"
              >
                Flag
              </span>
            </td>
            <td
              data-caption="Flag"
              data-fieldkey="flag"
            >
              <span
                className=""
              >
                
              </span>
            </td>
          </tr>
          <tr>
            <td>
              <span
                title="for set 3"
              >
                For set 3
              </span>
            </td>
            <td
              data-caption="For set 3"
              data-fieldkey="for set 3"
            >
              <span
                className=""
              >
                abc
              </span>
            </td>
          </tr>
          <tr>
            <td>
              <span
                title="again for set 3"
              >
                Again for set 3
              </span>
            </td>
            <td
              data-caption="Again for set 3"
              data-fieldkey="again for set 3"
            >
              <span
                className=""
              >
                false
              </span>
            </td>
          </tr>
          <tr>
            <td>
              <span
                title="another"
              >
                Another
              </span>
            </td>
            <td
              data-caption="Another"
              data-fieldkey="another"
            >
              <span
                className=""
              >
                test test
              </span>
            </td>
          </tr>
          <tr>
            <td>
              <span
                title="lookupfield"
              >
                Lookup Field Caption
              </span>
            </td>
            <td
              data-caption="Lookup Field Caption"
              data-fieldkey="lookupfield"
            >
              <a
                href="/labkey/Sample%20Management%202/list-details.view?listId=1&pk=test2"
              >
                test2
              </a>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`<DetailEditing/> loading 1`] = `
<div
  className="panel panel-default"
>
  <div
    className="panel-heading"
  >
    <div
      className="detail__edit--heading"
    >
      Details
    </div>
  </div>
  <div
    className="panel-body"
  >
    <span
      className=""
    >
      <i
        aria-hidden="true"
        className="fa fa-spinner fa-pulse"
      />
       
      Loading...
    </span>
  </div>
</div>
`;
